# rust-rag-api

./: .gitignore  Cargo.toml  README.md  bacon.toml
data/: text.txt
gemma4/: main.py
src/: clean.rs  database.rs  hash.rs  main.rs
tests/: itest.sh  simple.sh
tui/: Cargo.toml
tui/src/: main.rs
