[package]
name = "rag-axum-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
fastembed = "5.17.2"
reqwest = "0.13.4"
#tokio-rusqlite = "0.7.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust-stemmers = "1.2.0"
serde_json = "1.0.150"
stop-words = "0.10.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
turbovec = "0.9.0"
